syntax = "proto3";

import "google/protobuf/empty.proto";
package crypto_wallet;
option go_package = "protos/;crypto_wallet";

service CryptoWallet {
    rpc CreateWallet(google.protobuf.Empty) returns (CreteWalletResponse);
    rpc SendToken(SendRequest) returns (SendResponse);

    rpc TriggerWatcher(TriggerWatcherRequest) returns (TriggerWatcherResponse);
}

message SendRequest {
    string token = 1;
    string to_address = 2;
    int64 amount = 3;
}

message SendResponse {
    string hash_transaction = 1;
}

message CreteWalletResponse {
    string id = 1;
    string email = 2;
    string btc_address = 3;
    string eth_address = 4;
    string trx_address = 5;
}

message TriggerWatcherRequest {
    string token = 1;
}

message TriggerWatcherResponse {
    string address = 1;
}
